# fineshyt

./: .env.example  .gitignore  Makefile  README  README.md  docker-compose.yml  erl_crash.dump  libraw_prompt.txt
.claude/: settings.local.json
ai_worker/: .dockerignore  Dockerfile  pyproject.toml
ai_worker/scripts/: instagram_auth.py
ai_worker/src/: main.py
ai_worker/src/fineshyt_ai/: __init__.py  config.py  errors.py
ai_worker/src/fineshyt_ai/domain/: __init__.py  bursts.py  convert.py  curate.py  embed.py  preference.py
ai_worker/src/fineshyt_ai/imaging/: __init__.py  convert.py  exif.py  io.py  quality.py
ai_worker/src/fineshyt_ai/models/: __init__.py  clip.py  llm.py  preference.py
ai_worker/src/fineshyt_ai/schemas/: __init__.py  burst.py  convert.py  curate.py  embed.py  preference.py
ai_worker/src/fineshyt_ai/transports/: __init__.py
ai_worker/src/fineshyt_ai/transports/http/: __init__.py  app.py
ai_worker/src/fineshyt_ai/transports/http/routes/: __init__.py  burst.py  curate.py  ingestion.py  preference.py
desktop/: .gitignore  README.md
desktop/frontend/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: index.html  install-windows.html  using-fineshyt.html
orchestrator/: .dockerignore  .gitignore  Dockerfile  README.md  mix.exs
orchestrator/assets/css/: app.css
orchestrator/assets/js/: app.js
orchestrator/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
orchestrator/lib/: orchestrator.ex  orchestrator_web.ex
orchestrator/lib/mix/tasks/: fineshyt.embed_backfill.ex  (+3 more)
orchestrator/lib/orchestrator/: ai_worker.ex  application.ex  error_log.ex  mailer.ex  photos.ex  postgres_types.ex  release.ex  repo.ex  sidecars.ex
orchestrator/lib/orchestrator_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
orchestrator/priv/repo/: seeds.exs
orchestrator/test/: test_helper.exs
orchestrator/test/support/: conn_case.ex  data_case.ex
scripts/: backup.sh  com.fineshyt.backup.plist  generate-compose-override.sh  restore.sh
(+39 files in other folders)
