[project]
name = "ai_worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.128.8",
    "google-genai>=1.47.0",
    "huggingface-hub>=1.7.1",
    "instructor>=1.14.5",
    "langchain>=0.3.28",
    "openai>=2.29.0",
    "python-dotenv>=1.2.1",
]
