[package]
name = "fineshyt-desktop"
version = "0.1.0"
description = "Fine.Shyt desktop shell — Tauri 2.x webview wrapping the Phoenix LiveView UI"
authors = ["Qwelian D. Tanner"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
